fix front page and minor alignment adjustments

--- a/css/qt-theme.css
+++ b/css/qt-theme.css
@@ -227,7 +227,7 @@ section.has-light-background, section.has-light-background h1, section.has-light
   line-height: 1.2em;
   word-wrap: break-word;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-  right: 116px;
+  /* right: 116px; */
 }
 .reveal code {
   font-family: var(--r-code-font);
